<?xml version="1.0"?>
<package format="2">
  <name>iiwa_position_msgs</name>
  <version>0.0.0</version>
  <description>The iiwa_position_msgs package contains action defintions used for position control</description>
  <maintainer email="loic.niederhauser@epfl.ch">"Loïc Niederhauser"</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <build_export_depend>actionlib_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
